--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movie Theater Booking App</title>
-  <link rel="stylesheet" href="/style/style.css">
+  <title>Selecionador de Lugar no Cinema</title>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body onload="onLoaderFunc()">
@@ -14,10 +14,10 @@
 <div class="tudo">
  <div class="tudo">
   <div class="inputForm">
-    Name : <input type="text" id="Username" required>
-    Number of Seats : <input type="number" id="Numseats" required>
+    Nome : <input type="text" id="Username" required>
+    Número de Assentos : <input type="number" id="Numseats" required>
     <br /><br />
-    <button onclick="takeData()">Start Selecting</button>
+    <button onclick="takeData()">Selecionar</button>
   </div>
 
   <div class="seatStructure">
@@ -26,12 +26,12 @@
       <p id="notification"></p>
       <tr>
         <td colspan="14">
-          <div class="screen">SCREEN</div>
+          <div class="screen">TELA</div>
         </td>
         <td rowspan="20">
-          <div class="smallBox greenBox">Selected Seat</div> <br />
-          <div class="smallBox redBox">Reserved Seat</div><br />
-          <div class="smallBox emptyBox">Empty Seat</div><br />
+          <div class="smallBox emptyBox">Assento Vazio</div><br />
+          <div class="smallBox greenBox">Assento Selecionado</div> <br />
+          <div class="smallBox redBox">Assento Reservado</div><br />
         </td>
 
         <br />
@@ -44,8 +44,8 @@
         <td>3</td>
         <td>4</td>
         <td>5</td>
-        <td></td>
         <td>6</td>
+        <td></td>
         <td>7</td>
         <td>8</td>
         <td>9</td>
@@ -61,8 +61,8 @@
         <td><input type="checkbox" class="seats" value="A3"></td>
         <td><input type="checkbox" class="seats" value="A4"></td>
         <td><input type="checkbox" class="seats" value="A5"></td>
-        <td class="seatGap"></td>
         <td><input type="checkbox" class="seats" value="A6"></td>
+        <td class="seatGap"></td>
         <td><input type="checkbox" class="seats" value="A7"></td>
         <td><input type="checkbox" class="seats" value="A8"></td>
         <td><input type="checkbox" class="seats" value="A9"></td>
@@ -78,8 +78,8 @@
         <td><input type="checkbox" class="seats" value="B3"></td>
         <td><input type="checkbox" class="seats" value="B4"></td>
         <td><input type="checkbox" class="seats" value="B5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="B6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="B7"></td>
         <td><input type="checkbox" class="seats" value="B8"></td>
         <td><input type="checkbox" class="seats" value="B9"></td>
@@ -95,8 +95,8 @@
         <td><input type="checkbox" class="seats" value="C3"></td>
         <td><input type="checkbox" class="seats" value="C4"></td>
         <td><input type="checkbox" class="seats" value="C5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="C6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="C7"></td>
         <td><input type="checkbox" class="seats" value="C8"></td>
         <td><input type="checkbox" class="seats" value="C9"></td>
@@ -112,8 +112,8 @@
         <td><input type="checkbox" class="seats" value="D3"></td>
         <td><input type="checkbox" class="seats" value="D4"></td>
         <td><input type="checkbox" class="seats" value="D5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="D6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="D7"></td>
         <td><input type="checkbox" class="seats" value="D8"></td>
         <td><input type="checkbox" class="seats" value="D9"></td>
@@ -129,8 +129,8 @@
         <td><input type="checkbox" class="seats" value="E3"></td>
         <td><input type="checkbox" class="seats" value="E4"></td>
         <td><input type="checkbox" class="seats" value="E5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="E6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="E7"></td>
         <td><input type="checkbox" class="seats" value="E8"></td>
         <td><input type="checkbox" class="seats" value="E9"></td>
@@ -148,8 +148,8 @@
         <td><input type="checkbox" class="seats" value="F3"></td>
         <td><input type="checkbox" class="seats" value="F4"></td>
         <td><input type="checkbox" class="seats" value="F5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="F6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="F7"></td>
         <td><input type="checkbox" class="seats" value="F8"></td>
         <td><input type="checkbox" class="seats" value="F9"></td>
@@ -165,8 +165,8 @@
         <td><input type="checkbox" class="seats" value="G3"></td>
         <td><input type="checkbox" class="seats" value="G4"></td>
         <td><input type="checkbox" class="seats" value="G5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="G6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="G7"></td>
         <td><input type="checkbox" class="seats" value="G8"></td>
         <td><input type="checkbox" class="seats" value="G9"></td>
@@ -182,8 +182,8 @@
         <td><input type="checkbox" class="seats" value="H3"></td>
         <td><input type="checkbox" class="seats" value="H4"></td>
         <td><input type="checkbox" class="seats" value="H5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="H6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="H7"></td>
         <td><input type="checkbox" class="seats" value="H8"></td>
         <td><input type="checkbox" class="seats" value="H9"></td>
@@ -199,8 +199,8 @@
         <td><input type="checkbox" class="seats" value="I3"></td>
         <td><input type="checkbox" class="seats" value="I4"></td>
         <td><input type="checkbox" class="seats" value="I5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="I6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="I7"></td>
         <td><input type="checkbox" class="seats" value="I8"></td>
         <td><input type="checkbox" class="seats" value="I9"></td>
@@ -216,8 +216,8 @@
         <td><input type="checkbox" class="seats" value="J3"></td>
         <td><input type="checkbox" class="seats" value="J4"></td>
         <td><input type="checkbox" class="seats" value="J5"></td>
-        <td></td>
         <td><input type="checkbox" class="seats" value="J6"></td>
+        <td></td>
         <td><input type="checkbox" class="seats" value="J7"></td>
         <td><input type="checkbox" class="seats" value="J8"></td>
         <td><input type="checkbox" class="seats" value="J9"></td>
@@ -227,22 +227,17 @@
       </tr>
 
     </table>
-    <button id="confirmSelectionButton" onclick="updateTextArea()">Confirm Selection</button>
+    <button id="confirmSelectionButton" onclick="updateTextArea()">Confirmar Seleção</button>
   </div>
 
   <br /><br />
 
   <div class="displayerBoxes">
-      <table class="Displaytable">
+      <table class="Displaytable" id="data-table">
         <tr>
-          <th>Name</th>
-          <th>Number of Seats</th>
-          <th>Seats</th>
-        </tr>
-        <tr>
-          <td><textarea id="nameDisplay"></textarea></td>
-          <td><textarea id="NumberDisplay"></textarea></td>
-          <td><textarea id="seatsDisplay"></textarea></td>
+          <th>Nome</th>
+          <th>Número de Assentos</th>
+          <th>Assentos</th>
         </tr>
       </table>
 
@@ -250,7 +245,7 @@
 
   
 </div>
-  <script src="/script/script.js"></script>
+  <script src="script/script.js"></script>
 </body>
 
 </html>
